--- a/NorthWestLabs/Views/Home/Pricing.cshtml
+++ b/NorthWestLabs/Views/Home/Pricing.cshtml
@@ -3,47 +3,64 @@
     ViewBag.Title = "Pricing";
 }
 
-<h1>Pricing</h1>
 
-<div class="jumbotron">
-    <h2>Basic Tests</h2>
-    <br />
-    <p><strong>Biochemical Pharmacology (BP)</strong></p>
-    <p>Description of Test</p>
-        <ul>
-            <li>$300</li>
-        </ul>
-    <p><strong>DiscoveryScreen® (DS)</strong></p>
-    <p>Description of Test</p>
-        <ul>
-            <li>$400</li>
-        </ul>
-    <p><strong>ImmunoScreen® (IS)</strong></p>
-    <p>Description of Test</p>
-        <ul>
-            <li>$600</li>
-        </ul>
-    <p><strong>ProfilingScreen® (PF)</strong></p>
-    <p>Description of Test</p>
-        <ul>
-            <li>$200</li>
-        </ul>
-    <p><strong>PharmaScreen® (PS)</strong></p>
-    <p>Description of Test</p>
-        <ul>
-            <li>$900</li>
-        </ul>
-    <p><strong>CustomScreen™ (CS)</strong></p>
-    <p>Description of Test</p>
-        <ul>
-            <li>$700</li>
-        </ul>
-</div>
+<head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+</head>
 
-<div class="jumbotron">
-    <h2>Other Tests</h2>
-    <p>We offer a wide variety of tests, all with differing prices.</p>
-    <p>Get all the right tests for your Assay with no hassle!</p>
-    <p>Call or create a profile today!</p>
-    <h5>Get a Quote!</h5>
-</div>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+
+
+    <div class="jumbotron">
+        <h1>Basic Tests Pricing</h1>
+
+        <table class="table-striped">
+            <tr>
+                <th>Test</th>
+                <th>Description</th>
+                <th>Estimated Price</th>
+                <th>Days</th>
+            </tr>
+            <tr>
+                <td>Biochemical Pharmacology (BP)</td>
+                <td>Test for biochemical products.</td>
+                <td>$1200 - $1800</td>
+                <td>5 - 10 Days</td>
+            </tr>
+            <tr>
+                <td>Discovery Screen (DS)</td>
+                <td>Understand chemical reactions</td>
+                <td>$1000 - $1500</td>
+                <td>9 - 14 Days</td>
+            </tr>
+            <tr>
+                <td>ImmunoScreen (IS)</td>
+                <td>Discover immunities</td>
+                <td>$1800 - $2400</td>
+                <td>4 - 8 Days</td>
+            </tr>
+            <tr>
+                <td>Profiling Screen (PF)</td>
+                <td>Details all compouns</td>
+                <td>$1100 - $1600</td>
+                <td>3 - 6 Days</td>
+            </tr>
+            <tr>
+                <td>PharmaScreen (PS)</td>
+                <td>Indicates use in pharmecutical products.</td>
+                <td>$2000 - $2400</td>
+                <td>6 - 10 Days</td>
+            </tr>
+            <tr>
+                <td>Custom Screen (CS)</td>
+                <td>Add additional custom tests</td>
+                <td>$3000+ (varies)</td>
+                <td>10 - 12 Days</td>
+            </tr>
+        </table>
+        <center>
+            <p>Request quote for more detailed information.</p>
+            <p><input value="Request Price Quote" type="button" class="btn btn-primary btn-lg btn-block" style="opacity: initial;" onclick="location.href='@Url.Action("AddQuote")'" /></p>
+        </center>
+    </div>
+</body>
