--- a/NorthWestLabs/Views/Clients/CreateOrder.cshtml
+++ b/NorthWestLabs/Views/Clients/CreateOrder.cshtml
@@ -4,64 +4,74 @@
     ViewBag.Title = "CreateOrder";
 }
 
-<h2>CreateOrder</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>WorkOrder</h4>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <center><h1>New Compound Work Order</h1></center>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+        <fieldset>
+            <br />
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-horizontal">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RushOrder, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.RushOrder)
-                    @Html.ValidationMessageFor(model => model.RushOrder, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.RushOrder, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            <div class="checkbox">
+                                @Html.EditorFor(model => model.RushOrder)
+                                @Html.ValidationMessageFor(model => model.RushOrder, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.comments, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.HiddenFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2", @Value = (int?)ViewBag.clID, @readonly = "readonly" })
+                        <!--
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
                 </div>
-            </div>
-        </div>
+                -->
+                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.comments, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
-            </div>
-        </div>        
-
-        <div class="form-group">
-            @Html.HiddenFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2", @Value = (int?)ViewBag.clID, @readonly = "readonly" })
-            <!--
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
-            </div>
-            -->
-        </div>        
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-    <div>
-        @Html.ActionLink("Back to Work Orders", "ViewOrders", new { id = ViewBag.clID })
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
+                        </div>
+                    </div>
+                </div>
+            }
+        </fieldset>
         <br />
-        @Html.ActionLink("Back to Client Home", "ClientHome2", new { id = ViewBag.clID })
+        <div>
+            <center>
+                @Html.ActionLink("Back to Work Orders", "ViewOrders", new { id = ViewBag.clID }, new { @class = "btn btn-primary btn-lg" })
+                
+                @Html.ActionLink("Back to Client Home", "ClientHome2", new { id = ViewBag.clID }, new { @class = "btn btn-primary btn-lg" })
+            </center>
+        </div>
     </div>
+</body>
+
+
