--- a/NorthWestLabs/Views/Home/ClLogin.cshtml
+++ b/NorthWestLabs/Views/Home/ClLogin.cshtml
@@ -4,15 +4,23 @@
     ViewBag.Title = "LogInClient";
 }
 
-<h2>Client Log In</h2>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron">
+        <center>
+            <h1>Client Log In</h1>
+            <hr />
 
-@using (Html.BeginForm("ClLogin", "Home", FormMethod.Post))
-{
-    <label for="inputEmail">Email address</label>
-    @Html.TextBox("Email address")
-    <br /><br />
-    <label for="inputPassword">Password</label>
-    @Html.Password("Password")
-    <br /><br />
-    <button type="submit">Login</button>
-}
+            @using (Html.BeginForm("ClLogin", "Home", FormMethod.Post))
+            {
+                <label for="inputEmail">Email address</label><br />
+                @Html.TextBox("Email address")
+                <br />
+                <label for="inputPassword">Password</label><br />
+                @Html.Password("Password")
+                <br /><br />
+                <button type="submit" class="btn btn-primary btn-lg">Login</button>
+
+            }
+        </center>
+    </div>
+</body>
