--- a/NorthWestLabs/Views/Shared/_Layout.cshtml
+++ b/NorthWestLabs/Views/Shared/_Layout.cshtml
@@ -14,12 +14,12 @@
     <!-- Navbar (sit on top) -->
     <div class="w3-top">
         <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-            <a class="w3-bar-item w3-button">@Html.ActionLink("Northwest Labs", "Index", "Home")</a>
+            <a class="w3-bar-item w3-button" href="@Url.Action("Index", "Home")">Northwest Labs</a>
             <!-- Float links to the right. Hide them on small screens -->
             <div class="w3-right w3-hide-small">
-                <a class="w3-bar-item w3-button">@Html.ActionLink("Login", "Login", "Home")</a> |
-                <a href="#about" class="w3-bar-item w3-button">@Html.ActionLink("About", "About", "Home")</a> |
-                <a class="w3-bar-item w3-button">@Html.ActionLink("Request Quote", "AddQuote", "Home")</a>
+                <a class="w3-bar-item w3-button" href="@Url.Action("Login", "Home")">Login</a>
+                
+                <a class="w3-bar-item w3-button" href="@Url.Action("AddQuote", "Home")">Request Quote</a>
             </div>
         </div>
     </div>
@@ -28,7 +28,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Northwest Labs</p>
         </footer>
     </div>
 
