--- a/NorthWestLabs/Views/Home/Index.cshtml
+++ b/NorthWestLabs/Views/Home/Index.cshtml
@@ -26,25 +26,26 @@
 
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="~/Content/Images/gary.jpg" alt="John" style="width:100%">
+                <img src="~/Content/Images/gary.jpg" alt="Gary Anderson" style="width:100%">
                 <h3>Gary Anderson</h3>
                 <p class="w3-opacity">CEO & Founder</p>
                 <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("CreateProfile")'">Create New Profile</button></p>
+                
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="~/Content/Images/dallin.jpg" alt="Jane" style="width:100%">
+                <img src="~/Content/Images/dallin.jpg" alt="Dallin Fairbanks" style="width:100%">
                 <h3>Dallin Fairbanks</h3>
                 <p class="w3-opacity">Singapore Operations</p>
                 <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("Pricing")'">Pricing</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="~/Content/Images/bonnie.jpg" alt="Mike" style="width:100%">
+                <img src="~/Content/Images/bonnie.jpg" alt="Bonnie McDougal" style="width:100%">
                 <h3>Bonnie McDougal</h3>
                 <p class="w3-opacity">Sales Director</p>
                 <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("AddQuote")'">Quote Request</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="~/Content/Images/mason.jpg" alt="Dan" style="width:100%">
+                <img src="~/Content/Images/mason.jpg" alt="Mason Brockbank" style="width:100%">
                 <h3>Mason Brockbank</h3>
                 <p class="w3-opacity">Pharmecutical Director</p>
                 <p><button class="w3-button w3-light-grey w3-block" onclick="location.href='@Html.Action("Login")'">Login</button></p>
