--- a/NorthWestLabs/Views/Clients/ClientHome.cshtml
+++ b/NorthWestLabs/Views/Clients/ClientHome.cshtml
@@ -4,21 +4,49 @@
     ViewBag.Title = "ClientHome";
 }
 
-<h2>Client Home Page</h2>
-<br />
-<h2>Welcome</h2>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-@Html.DisplayFor(model => model.ClFName)
-<br /><br />
+<body>
+    <!-- Page content -->
+    <div class="w3-content w3-padding" style="max-width:1564px">
 
-@Html.ActionLink("Create Work Order", "CreateOrder", new { id = Model.ClientID })
-<br /><br />
 
-@Html.ActionLink("View Work Orders", "ViewOrders", new { id = Model.ClientID })
-<br /><br />
+        <!-- Header -->
+        <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+            <img class="w3-image" src="~/Content/Images/Seattle-unsplash.jpg" alt="Architecture" width="1500" height="800">
+            <div class="w3-display-middle w3-margin-top w3-center">
+                <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Welcome</b></span> <span class="w3-hide-small w3-text-light-grey">@Html.DisplayFor(model => model.ClFName)</span></h1>
+            </div>
+        </header>
 
-@Html.ActionLink("View Profile Info", "ViewProfile", new { id = Model.ClientID })
-<br /><br />
 
-@Html.ActionLink("Pricing Info", "ClientPrice", new { id = Model.ClientID })
-<br /><br />
+        <div class="w3-row-padding w3-grayscale" style="text-align: center;">
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <h3>Create Order</h3>
+                <img src="~/Content/Images/CreateWO-Unsplash.jpg" alt="Employee Picture" style="width:100%">
+                <br /><br />
+                <p><input value="Create Work Order" type="button" class="w3-button w3-light-grey w3-block" onclick="location.href='@Url.Action("CreateOrder", new { id = Model.ClientID })'" /></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <h3>Work Orders</h3>
+                <img src="~/Content/Images/WorkOrder-Unsplash (2).jpg" alt="Work Order Picture" style="width:100%">
+                <br /><br />
+                <p><input value="View Work Orders" type="button" class="w3-button w3-light-grey w3-block" onclick="location.href='@Url.Action("ViewOrders", new { id = Model.ClientID })'" /></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <h3>Your Profile</h3>
+                <img src="~/Content/Images/Profile-Unsplash (2).jpg" alt="Client Picture" style="width:100%">
+                <br /><br />
+                <p><input value="View Profile" type="button" class="w3-button w3-light-grey w3-block" onclick="location.href='@Url.Action("ViewProfile", new { id = Model.ClientID })'" /></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <h3>Pricing Info</h3>
+                <img src="~/Content/Images/Quotes-unsplash.jpg" alt="Quote Picture" style="width:100%">
+                <br /><br />
+                <p><input value="View Pricing Info" type="button" class="w3-button w3-light-grey w3-block" onclick="location.href='@Url.Action("ClientPrice", new { id = Model.ClientID })'" /></p>
+            </div>
+        </div>
+
+    </div>
+</body>
