--- a/NorthWestLabs/Views/Seattle/WorkOrderDetails.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderDetails.cshtml
@@ -48,15 +48,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.ReceivedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.WOResult)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WOResult)
-        </dd>
+        </dd>       
 
         <dt>
             @Html.DisplayNameFor(model => model.ClientID)
@@ -78,5 +70,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.WrkOrdID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "WorkIndex")
 </p>
