--- a/NorthWestLabs/Views/Home/Index.cshtml
+++ b/NorthWestLabs/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="w3-container w3-padding-32" id="about">
             <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
             <p>
-                Here at Northwest Labs we strive to get the precise, well documented, and accurately reported results that you need. We process every order like it is our only order because we beleive that our customers deserve the highest quality results.
+                Here at Northwest Labs we strive to get the precise, well documented, and accurately reported results that you need. We process every order like it is our only order because we believe that our customers deserve the highest quality results.
                 Our committment is to our clients.
             </p>
         </div>
